--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <script src="./libraries/p5.min.js"></script>
     <script src="./graphics.js"></script>
+    <style>
+      canvas {
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="scenery" class="scenery"></div>
